--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lotto Number Generator</title>
+    <title>Tetris</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Lotto Number Generator</h1>
-        <div class="lotto-numbers">
-            <span class="number"></span>
-            <span class="number"></span>
-            <span class="number"></span>
-            <span class="number"></span>
-            <span class="number"></span>
-            <span class="number"></span>
+    <h1>Tetris</h1>
+    <div id="game-container">
+        <canvas id="tetris-canvas" width="240" height="400"></canvas>
+        <div id="info">
+            <h2>Score</h2>
+            <p id="score">0</p>
+            <h2>Next</h2>
+            <canvas id="next-canvas" width="80" height="80"></canvas>
         </div>
-        <button id="generate-btn">Generate Numbers</button>
-        <button id="theme-toggle-btn">Toggle Dark/Light Mode</button>
     </div>
     <script src="main.js"></script>
 </body>
