--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <p id="score">0</p>
             <h2>Next</h2>
             <canvas id="next-canvas" width="80" height="80"></canvas>
+            <button id="pause-btn">Pause</button>
         </div>
     </div>
     <script src="main.js"></script>
