--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tetris</title>
-    <link rel="stylesheet" href="style.css">
+    <title>테스트 페이지</title>
 </head>
 <body>
-    <h1>Tetris</h1>
-    <div id="game-container">
-        <canvas id="tetris-canvas" width="240" height="400"></canvas>
-        <div id="info">
-            <h2>Score</h2>
-            <p id="score">0</p>
-            <h2>Next</h2>
-            <canvas id="next-canvas" width="80" height="80"></canvas>
-            <button id="pause-btn">Pause</button>
-        </div>
-    </div>
-    <script src="main.js"></script>
+    <h1>안녕하세요 여기는 테스트 방입니다.</h1>
 </body>
 </html>
