--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
             <button type="submit">문의하기</button>
         </form>
     </div>
+
     <div id="disqus_thread"></div>
     <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
         var disqus_config = function () {
-        this.page.url = window.location.href;  // Use current page's URL
-        this.page.identifier = 'formspree-contact-form-1'; // Unique identifier for this page
+        this.page.url = window.location.href;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = 'formspree-contact-form-1'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
         (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
