Feature: Implement animal face test with photo upload and Disqus. Add contact form page.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
     </style>
 </head>
 <body>
+    <nav style="width: 100%; text-align: right; padding: 10px; background-color: #e0e0e0; margin-bottom: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <a href="contact.html" style="text-decoration: none; color: #007bff; font-weight: bold; padding: 8px 15px; border-radius: 5px; background-color: #fff;">제휴 문의</a>
+    </nav>
     <h1>얼굴로 보는 동물상 테스트</h1>
     <div class="description">
-        당신의 얼굴이 고양이상인지, 강아지상인지 인공지능이 분석해 드립니다! 웹캠을 켜고 얼굴을 보여주세요.
+        당신의 얼굴이 고양이상인지, 강아지상인지 인공지능이 분석해 드립니다! 사진을 업로드해 주세요.
     </div>
 
-    <button type="button" onclick="init()">테스트 시작!</button>
-    <div id="webcam-container"></div>
+    <input type="file" id="file-input" accept="image/*" onchange="init()" style="margin-bottom: 20px; padding: 10px; border: 1px solid #ddd; border-radius: 5px;">
+    <img id="uploaded-image" style="max-width: 300px; max-height: 300px; margin-top: 20px; border: 1px solid #eee; display: none;">
     <div id="label-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
@@ -84,57 +87,65 @@
         // the link to your model provided by Teachable Machine export panel
         const URL = "https://teachablemachine.withgoogle.com/models/DfAXjTgSG/";
 
-        let model, webcam, labelContainer, maxPredictions;
+        let model, labelContainer, maxPredictions;
+        let imageElement, imageCanvas, ctx; // New variables for uploaded image
 
-        // Load the image model and setup the webcam
+        // Load the image model and setup for prediction from uploaded image
         async function init() {
-            // Check if webcam is already running or model loaded to prevent re-initialization
-            if (webcam && webcam.webcam) {
-                console.log("Webcam already active.");
-                return;
-            }
-
-            const modelURL = URL + "model.json";
-            const metadataURL = URL + "metadata.json";
-
-            // load the model and metadata
-            model = await tmImage.load(modelURL, metadataURL);
-            maxPredictions = model.getTotalClasses();
-
-            // Convenience function to setup a webcam
-            const flip = true; // whether to flip the webcam
-            webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-            await webcam.setup(); // request access to the webcam
-            await webcam.play();
-            window.requestAnimationFrame(loop);
-
-            // append elements to the DOM
-            document.getElementById("webcam-container").innerHTML = ''; // Clear previous content if any
-            document.getElementById("webcam-container").appendChild(webcam.canvas);
+            // Clear previous elements and results
+            document.getElementById("webcam-container").innerHTML = ''; // Ensure webcam container is cleared
+            document.getElementById("label-container").innerHTML = ''; // Clear labels
             
-            labelContainer = document.getElementById("label-container");
-            labelContainer.innerHTML = ''; // Clear previous labels if any
-            for (let i = 0; i < maxPredictions; i++) { // and class labels
-                labelContainer.appendChild(document.createElement("div"));
-            }
-        }
+            const fileInput = document.getElementById("file-input");
+            imageElement = document.getElementById("uploaded-image");
 
-        async function loop() {
-            if (webcam) { // Ensure webcam is initialized before updating
-                webcam.update(); // update the webcam frame
-                await predict();
-            }
-            window.requestAnimationFrame(loop);
-        }
-
-        // run the webcam image through the image model
-        async function predict() {
-            if (!model || !webcam || !webcam.canvas) {
-                console.log("Model or webcam not ready for prediction.");
+            if (fileInput.files.length === 0) {
+                imageElement.style.display = 'none';
+                console.log("No file selected.");
                 return;
             }
-            // predict can take in an image, video or canvas html element
-            const prediction = await model.predict(webcam.canvas);
+
+            const file = fileInput.files[0];
+            const reader = new FileReader();
+
+            reader.onload = async (e) => {
+                imageElement.src = e.target.result;
+                imageElement.style.display = 'block'; // Show the selected image
+
+                // Create an off-screen canvas for prediction (Teachable Machine expects 200x200)
+                imageCanvas = document.createElement('canvas');
+                ctx = imageCanvas.getContext('2d');
+                const img = new Image();
+                img.src = e.target.result;
+
+                img.onload = async () => {
+                    imageCanvas.width = 200;
+                    imageCanvas.height = 200;
+                    ctx.drawImage(img, 0, 0, 200, 200); // Draw image to canvas
+
+                    // Load the model and metadata
+                    const modelURL = URL + "model.json";
+                    const metadataURL = URL + "metadata.json";
+                    model = await tmImage.load(modelURL, metadataURL);
+                    maxPredictions = model.getTotalClasses();
+
+                    labelContainer = document.getElementById("label-container");
+                    for (let i = 0; i < maxPredictions; i++) {
+                        labelContainer.appendChild(document.createElement("div"));
+                    }
+                    await predict(); // Run prediction once after image is loaded and model ready
+                };
+            };
+            reader.readAsDataURL(file);
+        }
+
+        // predict function now uses the image from the off-screen canvas
+        async function predict() {
+            if (!model || !imageCanvas || !ctx) {
+                console.log("Model or image not ready for prediction.");
+                return;
+            }
+            const prediction = await model.predict(imageCanvas); // Predict from imageCanvas
             for (let i = 0; i < maxPredictions; i++) {
                 const classPrediction =
                     prediction[i].className + ": " + (prediction[i].probability * 100).toFixed(0) + "%"; // Display as percentage
@@ -142,5 +153,20 @@
             }
         }
     </script>
+
+    <div id="disqus_thread" style="width: 100%; max-width: 700px; margin-top: 40px;"></div>
+    <script>
+        var disqus_config = function () {
+        this.page.url = window.location.href;  // Use current page's canonical URL variable
+        this.page.identifier = 'animal-face-test-page'; // Unique identifier for this page
+        };
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://test-1-mxxr22irmh.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
