--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,21 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
             margin: 0;
+            padding: 0;
+        }
+        nav {
+            width: 100%;
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
         }
         .container {
             background-color: #ffffff;
@@ -21,6 +31,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 500px;
+            margin: 40px auto;
         }
         h2 {
             text-align: center;
@@ -67,6 +78,12 @@
     </style>
 </head>
 <body>
+    <nav>
+        <a href="index.html">홈</a>
+        <a href="about.html">소개</a>
+        <a href="contact.html">제휴 문의</a>
+        <a href="privacy.html">개인정보 처리방침</a>
+    </nav>
     <div class="container">
         <h2>제휴 문의</h2>
         <form action="https://formspree.io/f/xykprbyl" method="POST">
