--- a/index.html
+++ b/index.html
@@ -68,12 +68,24 @@
     </style>
 </head>
 <body>
-    <nav style="width: 100%; text-align: right; padding: 10px; background-color: #e0e0e0; margin-bottom: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-        <a href="contact.html" style="text-decoration: none; color: #007bff; font-weight: bold; padding: 8px 15px; border-radius: 5px; background-color: #fff;">제휴 문의</a>
+    <nav style="width: 100%; background-color: #333; color: white; padding: 10px 0; text-align: center; margin-bottom: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <a href="index.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">홈</a>
+        <a href="about.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">소개</a>
+        <a href="contact.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">제휴 문의</a>
+        <a href="privacy.html" style="color: white; margin: 0 15px; text-decoration: none; font-weight: bold;">개인정보 처리방침</a>
     </nav>
     <h1>얼굴로 보는 동물상 테스트</h1>
     <div class="description">
-        당신의 얼굴이 고양이상인지, 강아지상인지 인공지능이 분석해 드립니다! 웹캠을 사용하거나 사진을 업로드해 주세요.
+        <p>당신의 얼굴이 고양이상인지, 강아지상인지 궁금하신가요? 저희의 인공지능이 당신의 얼굴을 분석하여 알려드립니다!</p>
+        <p>웹캠을 사용하거나 사진을 업로드하여 빠르고 재미있게 자신의 동물상을 확인해보세요. 친구들과 결과를 공유하며 즐거운 시간을 보낼 수도 있습니다.</p>
+    </div>
+
+    <div class="service-info" style="max-width: 600px; margin-bottom: 30px; text-align: left; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+        <h2 style="text-align: center; color: #2c3e50;">서비스 정보</h2>
+        <p><strong>어떻게 작동하나요?</strong><br>
+        이 서비스는 Google의 Teachable Machine을 기반으로 한 인공지능 모델을 사용합니다. 수천 장의 고양이와 강아지 얼굴 데이터를 학습한 모델이 당신의 얼굴 특징을 분석하여 어떤 동물상에 더 가까운지 판단합니다.</p>
+        <p><strong>개인정보 보호</strong><br>
+        당신의 개인정보는 안전합니다. 웹캠이나 파일로 업로드된 이미지는 서버에 저장되지 않으며, 분석이 끝나면 즉시 폐기됩니다. 자세한 내용은 <a href="privacy.html">개인정보 처리방침</a>을 확인해주세요.</p>
     </div>
 
     <div style="margin-bottom: 20px;">
